# galaxy-gen

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs  rust-toolchain.toml
.github/workflows/: ci.yml
.zed/: settings.json
galaxies/: m101.toml  m31.toml  m51.toml  ngc628.toml
galaxy-shader/: Cargo.toml
galaxy-shader/src/: lib.rs
plans/: 001-cache-gpu-resources.md  002-characterization-tests.md  003-dx-baseline.md  004-remove-dead-shader-code.md  005-struct-guard.md  006-remove-unused-image-dep.md  007-egui-gui.md  008-logarithmic-spiral-arms.md  009-remove-dead-shader-functions.md  010-physical-star-colors.md  011-3d-density-and-ray-march.md  012-gpu-instanced-stars.md  013-cache-compute-bind-group.md  014-upload-star-catalogue-on-dirty.md  015-needs-render-in-stars-only.md  016-remove-dead-instance-count.md  017-split-main-modules.md  018-star-catalogue-tests.md  019-surface-format-display-shader.md  020-name-camera-constants.md  021-preset-cross-fade.md  022-dust-extinction.md  023-additional-presets.md  024-remove-3d-glow-unify-stars.md  025-remove-2d-compute-glow.md  README.md
src/: app.rs  camera.rs  display.wgsl  galaxy.rs  gpu.rs  input.rs  lib.rs  main.rs  render.rs  sampler.rs  stars.wgsl  ui.rs
