[workspace]
members = ["galaxy-shader"]
resolver = "2"

[package]
name = "galaxy-gen"
version = "0.1.0"
edition = "2024"

[lib]
name = "galaxy_gen"
path = "src/lib.rs"

[[bin]]
name = "galaxy-gen"
path = "src/main.rs"

[build-dependencies]
spirv-builder = { git = "https://github.com/Rust-GPU/rust-gpu" }

[dependencies]
wgpu = { version = "24", features = ["spirv"] }
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.4"
winit = "0.30"
image = "0.25.10"
egui = "0.31"
egui-wgpu = "0.31"
egui-winit = "0.31"

[profile.dev.build-override]
opt-level = 3

[profile.release.build-override]
opt-level = 3
